# gemini-cli-server

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
gemini_cli_server/: __init__.py  __main__.py  api_types.py  cli_runner.py  config.py  models.py  server.py
tests/: conftest.py  test_api_types.py  test_cli_runner.py  test_config.py  test_e2e.py  test_models.py  test_real_subprocess.py  test_server.py
